--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
         "symfony/twig-bundle": "^4.4",
         "symfony/validator": "4.4.*",
         "symfony/web-link": "4.4.*",
+        "symfony/workflow": "4.4.*",
         "symfony/yaml": "4.4.*",
         "tetranz/select2entity-bundle": "^3.1",
         "twig/extra-bundle": "^3.3",
