--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "symfony/workflow": "4.4.*",
         "symfony/yaml": "4.4.*",
         "tetranz/select2entity-bundle": "^3.1",
+        "twig/extensions": "^1.5",
         "twig/extra-bundle": "^3.3",
         "twig/twig": "^2.12"
     },
