add custom website (to be used on 51eg)
enable specific veaf on demand

fix error 403 custom

fix name in admin layout

fix specific VEAF and grow images

customize favicon

fix padding top

fix

fix

add CHANGELOG

--- a/.php.env.dist
+++ b/.php.env.dist
@@ -15,3 +15,5 @@ RECAPTCHA3_ENABLED=0
 GOOGLE_AGENT=
 API_SLMOD_URL=http://example.localhost:1234
 
+WEBSITE=veaf
+CDN_URL=https://cdn.veaf.org/website/dev
