--- a/config/packages/parameters.yaml
+++ b/config/packages/parameters.yaml
@@ -1,6 +1,8 @@
 parameters:
-  cdn_veaf: https://cdn.veaf.org/website/dev
+  cdn_url: "%env(CDN_URL)%"
   mail_from: "%env(MAIL_FROM)%"
   google_agent: "%env(GOOGLE_AGENT)%"
   api_slmod_url: "%env(API_SLMOD_URL)%"
   app_version: 1.6.1
+  # website version
+  website: "%env(WEBSITE)%"
