display teamspeak clients connected, close #169
add REDIS to handle cache, scan teamspeak from command line

fix upgrade notes

--- a/.env.dist
+++ b/.env.dist
@@ -8,3 +8,8 @@ PROXY_NETWORK=webproxy
 #PHP_TAG=7.4-buster-dev
 #NGINX_REGISTRY=kilik/nginx
 #NGINX_TAG=symfony-4.x-stretch
+
+###> snc/redis-bundle ###
+# passwords that contain special characters (@, %, :, +) must be urlencoded
+REDIS_URL=redis://localhost
+###< snc/redis-bundle ###
