--- a/.php.env.dist
+++ b/.php.env.dist
@@ -14,6 +14,9 @@ RECAPTCHA3_ENABLED=0
 
 GOOGLE_AGENT=
 API_SLMOD_URL=http://example.localhost:1234
+API_TEAMSPEAK_URL=serverquery://ts.example.com:10011/?server_port=9987
 
 WEBSITE=veaf
 CDN_URL=https://cdn.veaf.org/website/dev
+
+REDIS_URL=redis://redis
