--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,13 @@
         "knplabs/knp-time-bundle": "^1.15",
         "ob/highcharts-bundle": "^1.7",
         "phpdocumentor/reflection-docblock": "^5.2",
+        "planetteamspeak/ts3-php-framework": "^1.1",
+        "predis/predis": "^1.1",
         "ramsey/uuid-doctrine": "^1.6",
         "sensio/framework-extra-bundle": "^6.0",
+        "snc/redis-bundle": "^3.3",
         "symfony/asset": "4.4.*",
+        "symfony/cache": "4.4.*",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/expression-language": "4.4.*",
