--- a/config/packages/parameters.yaml
+++ b/config/packages/parameters.yaml
@@ -3,6 +3,7 @@ parameters:
   mail_from: "%env(MAIL_FROM)%"
   google_agent: "%env(GOOGLE_AGENT)%"
   api_slmod_url: "%env(API_SLMOD_URL)%"
+  api_teamspeak_url: "%env(API_TEAMSPEAK_URL)%"
   app_version: 1.7.3
   # website version
   website: "%env(WEBSITE)%"
