display server meteo (from Perun) on instance details, close #280
WIP on display weather

fix instance / mission display

fix

--- a/config/packages/cache.yaml
+++ b/config/packages/cache.yaml
@@ -24,3 +24,8 @@ framework:
                 public: true
                 default_lifetime: 1200
                 provider: snc_redis.default
+            cache.perun:
+                adapter: cache.adapter.redis
+                public: true
+                default_lifetime: 120
+                provider: snc_redis.default
