--- a/fixtures/menu_item.yaml
+++ b/fixtures/menu_item.yaml
@@ -123,7 +123,8 @@ App\Entity\Menu\Item:
   menuitem_guest:
     label: 'Restriction Guest'
     icon: 'fa fa-hotel'
-    type: <(App\Entity\Menu\Item::TYPE_LINK)>
+    type: <(App\Entity\Menu\Item::TYPE_PAGE)>
+    page: '@page_guest'
     enabled: true
     position: 6
     restriction: <(App\Security\Restriction::LEVEL_GUEST)>
@@ -132,7 +133,8 @@ App\Entity\Menu\Item:
   menuitem_cadet:
     label: 'Restriction Cadet'
     icon: 'fa fa-hotel'
-    type: <(App\Entity\Menu\Item::TYPE_LINK)>
+    type: <(App\Entity\Menu\Item::TYPE_PAGE)>
+    page: '@page_cadet'
     enabled: true
     position: 7
     restriction: <(App\Security\Restriction::LEVEL_CADET)>
@@ -141,7 +143,8 @@ App\Entity\Menu\Item:
   menuitem_member:
     label: 'Restriction Membre'
     icon: 'fa fa-hotel'
-    type: <(App\Entity\Menu\Item::TYPE_LINK)>
+    type: <(App\Entity\Menu\Item::TYPE_PAGE)>
+    page: '@page_member'
     enabled: true
     position: 8
     restriction: <(App\Security\Restriction::LEVEL_MEMBER)>
