--- a/fixtures/user.yaml
+++ b/fixtures/user.yaml
@@ -6,6 +6,7 @@ App\Entity\User:
     roles: [ROLE_ADMIN]
     perunPlayer: '@perun_player_mitch'
     nickname: 'mitch'
+    discord: 'Mitch#4307'
     createdAt: "<dateTimeBetween('-1 month', 'now')>"
     updatedAt: "<dateTimeBetween('-1 month', 'now')>"
     simBms: false
